assets/css/style.css
/* ... */
/* - Blog and post headers - */
#masthead {
  position: relative;
  display: table;
  text-align: center;
  width: 100%;
  height: 60%;
  padding: 24px 0;
  margin-bottom: 72px;
  box-sizing: border-box;
}
#masthead.align-left {
  text-align: left;
}
#masthead.align-right {
  text-align: right;
}
/* - Brand - */
.brand img {
  max-height: 120px;
}
/* - Blog title and description - */
.blog-title {
  font-size: 36px;
  line-height: 36px;
  text-transform: uppercase;
  margin-bottom: 12px;
}
.blog-title span {
  display: block;
}
.blog-description {
  text-transform: none;
  padding-top: 12px;
  margin-top: 12px;
  font-size: 18px;
}
#main {
  position: relative;
  z-index: 1;
}
@media (max-width: 480px) {
  .brand img {
    max-height: 60px;
  }
  .blog-title {
    font-size: 24px;
    line-height: 24px;
  }
  .blog-description {
    display: none;
  }
  .image-credit {
    display: none;
  }
  .home-template .row {margin: 0 -5px;} /* fixes overflow on homepage on small screens (caused by stacked -15px from bootstrap) */
}
/* ----------- */
/* POST STYLES */
/* ----------- */
/* - Post title - */
.post-title {
  margin-top: 0;
  margin-bottom: 12px;
  padding-bottom: 12px;
}
/* - Post info - */
.post-info {
  margin-bottom: 24px;
}
/* -- Post Tags -- */
/* -  Post Body - */
.post-body {
  padding-bottom: 72px;
  margin-bottom: 72px;
}
.post-template .post-body {
  padding-bottom: 36px;
  margin-bottom: 24px;
}
.post-body img {
  max-width: 100%;
  margin-bottom: 24px;
}
.post-body a {
  border-bottom: 1px dotted;
}
.page-body img {
  max-width: 100%;
  margin-bottom: 24px;
  border-radius: 5px;
}
/* - Post Share - */
.post-share {
  margin-bottom: 48px;
}
/* - Post Author - */
.post-author {
  margin-bottom: 72px;
}
.post-author h4 {
  margin-top: 0;
  margin-bottom: 12px;
  padding-bottom: 12px;
}
/* - Post Avatar - */
.post-avatar {
  max-width: 150px;
  margin: 0 auto 12px;
  border-radius: 50% !important;
}
/* - Post IBM Champion logo */
.post-signoff-champion {
  border-radius: 5%;
  max-width: 160px;
}
/* -  Pagination - */
.pagination {
  display: block;
  position: relative;
}
.older-posts,
.newer-posts {
  display: block;
  position: absolute;
  top: 0;
}
.older-posts {
  right: 0;
}
.newer-posts {
  left: 0;
}
@media (max-width: 480px) {
  .older-posts,
  .newer-posts {
    position: relative;
  }
}
/* ------ */
/* FOOTER */
/* ------ */
#footer {
  margin-top: 72px;
  padding: 124px 0 72px;
  position: relative;
  width: 100%;
  height: 60%;
  display: table;
  z-index: 1;
}
#footer .container {
  position: relative;
  z-index: 2;
}
/* ---------------- */
/* THEME UTILITITES */
/* ---------------- */
/* - Decor -*/
.decor-wrapper {
  width: 100%;
  height: 50%;
  position: absolute;
  left: 0;
  bottom: 0;
}
#footer .decor-wrapper {
  bottom: auto;
  top: 0;
}
@media (max-width: 767px) {
  .decor-wrapper {
    max-height: 150px;
  }
}
@media (max-width: 480px) {
  .decor-wrapper {
    max-height: 100px;
  }
}
.decor {
  position: absolute;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
}
.decor.bottom {
  bottom: -1px;
}
.decor.top {
  top: -1px;
}
/* - Theme Backgrounds - */
.blog-background {
  background-repeat: no-repeat;
  background-position: center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-attachment: fixed;
}
@media (max-width: 1024px) {
  .blog-background {
    background-attachment: scroll;
  }
}
/* - Inner allignment - */
.inner {
  display: table-cell;
  vertical-align: top;
  position: relative;
  z-index: 10;
}
.align-middle .inner {
  vertical-align: middle;
}
.align-bottom .inner {
  vertical-align: bottom;
}
@media (max-width: 767px) {
  #masthead .inner {
    top: 0%;
  }
}
/* - Overlay - */
.overlay:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}
/* - Border Classes - */
.bordered-top,
.bordered-bottom {
  position: relative;
}
.bordered-top:after,
.bordered-bottom:after {
  content: '';
  display: block;
  position: absolute;
  height: 1px;
  width: 80px;
  left: 50%;
  margin-left: -40px;
}
.bordered-top:after {
  top: 0;
}
.bordered-bottom:after {
  bottom: 0;
}
/* Social list */
.social-icons {
  margin: 0;
  padding: 0 0 48px;
  list-style-type: none;
}
.social-icons li {
  display: inline-block;
  padding: 0 12px;
}
.social-icons a {
  display: block;
  font-size: 24px;
  height: 72px;
  width: 72px;
  line-height: 72px;
  border-radius: 50%;
  -webkit-transition: all .2s;
  -moz-transition: all .2s;
  -o-transition: all .2s;
  -ms-transition: all .2s;
  transition: all .2s;
}
.social-icons i {
  vertical-align: middle;
}
.social-mini {
  margin: 0;
  padding: 0 0 24px;
  list-style-type: none;
}
.social-mini li {
  display: inline-block;
  font-size: 16px;
  padding: 0 12px;
}
/* - Responsive videos -*/
.videoWrapper {
  position: relative;
  padding-bottom: 56.25%;
  /* 16:9 */
  padding-top: 25px;
  height: 0;
  margin-bottom: 24px;
}
.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
/* ----------- */
/* THEME FONTS */
/* ----------- */
body {
  font-family: 'PT Sans', sans-serif;
}
body input,
body textarea,
body .btn,
body button {
  font-family: 'PT Sans', sans-serif;
}
.lighter {
  font-weight: 200 !important;
}
.light {
  font-weight: 300 !important;
}
.lead {
  font-weight: 400;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Raleway', sans-serif;
}
h1.lighter,
h2.lighter,
h3.lighter,
h4.lighter,
h5.lighter,
h6.lighter {
  font-weight: 300 !important;
}
/* ---------- */
/* ANIMATIONS */
/* ---------- */
.animated .small,
.animated .medium,
.animated .large {
  opacity: 0;
  -webkit-transition-property: all;
  -moz-transition-property: all;
  -o-transition-property: all;
  -ms-transition-property: all;
  transition-property: all;
}
/* ... */

